# comicbook-vr

./: .clang-format  CMakeLists.txt  README.md  capture.cpp  dual.cpp  effects.cpp  kmeans-cpu.cpp  kmeans.cpp  kmeans.cu  live.cpp  offline.cpp  pipeline.cpp
include/: capture.h  effects.h  kmeans.h  pipeline.h  timing.h
